--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
   <header>
     <div class="logo-container">
-      <img src="images/logo.png" alt="Logo" class="logo">
+      <img src="images/LOGO.png" alt="Logo" class="logo">
     </div>
     <nav>
       <a href="index.html">HOME</a>
